--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,10 @@
         {% include_cached search/search_form.html %}
       </div>
     {% endif %}
+    
+    <aside class="sidebar__top">
+      <a href="#site-nav"> <i class="fa fa-angle-double-up fa-2x" style="color: #314549;"></i> </a>
+    </aside>
 
     <div id="footer" class="page__footer">
       <footer>
