fixing rss error

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,3 +23,5 @@
     <script src="{{ script | relative_url }}"></script>
   {% endfor %}
 {% endif %}
+
+<link rel="alternate" type="application/rss+xml" href="https://hyeonjeong1.github.io/feed.xml">
