KG-GPT paper review

--- a/_sass/minimal-mistakes/skins/_neon.scss
+++ b/_sass/minimal-mistakes/skins/_neon.scss
@@ -39,6 +39,7 @@ $base0c: #1faaaa !default;
 $base0d: #3777e6 !default;
 $base0e: #ad00a1 !default;
 $base0f: #cc6633 !default;
+$base08: #ffecf6 !default;
 
 .author__urls.social-icons i,
 .author__urls.social-icons .svg-inline--fa,
